Fix mobile pagination wrapping and move inline styles to relevant file

--- a/static/sass/_pattern_cve.scss
+++ b/static/sass/_pattern_cve.scss
@@ -15,7 +15,7 @@
     }
 
     th.cve-table-packages {
-      padding-left: 2.1rem;
+      padding-left: 2rem;
     }
 
     tr:not(:first-child) {
@@ -26,14 +26,11 @@
       border-top: none !important;
       position: relative;
       word-wrap: break-word;
-      
     }
 
     td.p-text--small {
       padding-top: 0.5rem;
     }
-
-
   }
 
   .p-tooltip__message.cve-chip {
@@ -94,6 +91,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    .p-pagination {
+      flex-wrap: wrap;
+    }
   }
 
   .cve-pagination-footer-links {
@@ -261,14 +262,22 @@
     overflow-wrap: break-word;
   }
 
+  .u-status-bump {
+    padding-left: 1.5rem;
+  }
+
+  .u-icon-bump {
+    margin-left: 0.35rem;
+  }
+
   @media screen and (width < $breakpoint-x-large) {
     .u-cve-table-horizontal-scroll {
-      overflow-x: hidden;
-      .u-cve-table-horizontal-scroll__table {
-        display: block;
-        overflow-x: auto;
-        white-space: nowrap;
-      }
+      overflow-x: auto;
+    }
+
+    .u-cve-table-horizontal-scroll__table {
+      width: max-content;
+      min-width: 100%;
     }
   }
 }
